--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,9 +21,11 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  toggle_switch: "^0.1.8"
+  http: ^0.12.2
   flutter:
     sdk: flutter
-
+    
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
