--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.flutter_app">
+    package="com.example.dota2_info">
     <uses-permission android:name="android.permission.INTERNET" />
    <application
-        android:label="flutter_app"
+        android:label="dota2_info"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
